# nasa-hackaton-2025

./: .editorconfig  .gitignore  README.md  prompt_plan.md  specs.md
apps/api/: AGENTS.md  README.md  examples.py  pyproject.toml  record_vcr_cassette.py  run.py
apps/api/app/: __init__.py  config.py  main.py  models.py
apps/api/app/analysis/: __init__.py  distributions.py  probability.py  trends.py
apps/api/app/application/: __init__.py  classification_service.py  climate_energy_service.py  weather_service.py  weather_utils.py
apps/api/app/clients/: __init__.py  imerg.py  precipitation.py
apps/api/app/controllers/: __init__.py  weather_controller.py
apps/api/app/domain/: __init__.py  climate_entities.py  climate_interfaces.py  entities.py  enums.py  interfaces.py
apps/api/app/engine/: __init__.py  samples.py
apps/api/app/export/: __init__.py  exporter.py
apps/api/app/infrastructure/: __init__.py  config.py  http_client.py  nasa_climate_repository.py  repositories.py
apps/api/app/mock-nasa/: climate_energy_analysis.py  mock-processing.py  mock-re-processing.ipynb  mock_processing.py
apps/api/app/mock-processing/: mock-processing.py
apps/api/app/models/: __init__.py  weather.py
apps/api/app/presentation/: __init__.py  climate_routes.py  dependencies.py  models.py  weather_routes.py
apps/api/app/services/: __init__.py  classification_service.py  weather_service.py
apps/api/app/time/: __init__.py  timezone.py
apps/api/app/weather/: __init__.py  calculations.py  power.py  thresholds.py
apps/api/tests/: conftest.py  test_calculations.py  test_classification_service.py  test_config.py  test_distributions.py  test_export.py  test_full_risk_endpoint.py  test_health.py  test_imerg.py  test_integration.py  test_middleware.py  test_power.py  test_precipitation.py  test_probability.py  test_rate_limit_integration.py  test_risk_endpoint.py  test_samples.py  test_thresholds.py  test_timezone.py  test_trends.py  test_weather_endpoints.py  test_weather_service.py
apps/api/tests/cassettes/: power_api_custom_params.yaml  power_api_fortaleza_sample.yaml
docs/: Documentation.md  Documentação.md  plan.md  spec.md  todo.md
front/: index.html  package-lock.json  package.json
front/src/: Dashboard.css  Dashboard.tsx  index.css  main.tsx
front/src/components/: index.ts
front/src/components/cards/CalendarCard/: CalendarCard.css  CalendarCard.tsx
front/src/components/cards/DailyForecast/: DailyForecast.css  DailyForecast.tsx
front/src/components/cards/MapCard/: MapCard.css  MapCard.tsx
front/src/components/cards/MetricsCard/: MetricsCard.css  MetricsCard.tsx
front/src/components/cards/PrecipitationChartCard/: PrecipitationChartCard.css  PrecipitationChartCard.tsx
front/src/components/cards/RenewableEnergyCard/: RenewableEnergyCard.css  RenewableEnergyCard.tsx
front/src/components/cards/TodayWeatherSection/: TodayWeatherSection.css  TodayWeatherSection.tsx
front/src/components/cards/WeatherCard/: WeatherCard.css  WeatherCard.tsx
front/src/components/common/: ChartSkeleton.tsx  LoadingSpinner.tsx  SkeletonLoader.tsx
front/src/components/energy/: index.ts
front/src/contexts/: AppContext.tsx  FilterContext.tsx
front/src/hooks/: useEnergyData.ts
front/src/pages/: EnergyPanel.css  EnergyPanel.module.css  EnergyPanel.tsx
front/src/pages/Dashboard/: Dashboard.css  Dashboard.tsx
front/src/types/: api.ts  app.ts
front/src/utils/: api.ts  csvExport.ts  timezone.ts
(+18 files in other folders)
