# ABOUTME: Project configuration for the Outdoor Risk API service
# ABOUTME: Defines dependencies and tool settings using modern uv + pyproject.toml approach

[project]
name = "outdoor-risk-api"
version = "0.1.0"
description = "NASA Hackathon 2025 - Outdoor Risk Assessment API"
authors = [
    {name = "Wanderley", email = "vinicius@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0", 
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-json-logger>=2.0.0",
    "slowapi>=0.1.9",
]

[project.scripts]
dev-server = "app.main:run_dev_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.31.0",
    "anyio>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"