# ABOUTME: Project configuration for the Outdoor Risk API service
# ABOUTME: Defines dependencies and tool settings using modern uv + pyproject.toml approach

[project]
name = "outdoor-risk-api"
version = "0.1.0"
description = "NASA Hackathon 2025 - Outdoor Risk Assessment API"
authors = [
    {name = "Wanderley", email = "vinicius@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "python-json-logger>=2.0.0",
    "slowapi>=0.1.9",
    "timezonefinder>=6.4.0",
    "tzdata>=2023.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "numpy>=1.24.0",
    "openai>=2.1.0",
]

[project.scripts]
dev-server = "app.main:run_dev_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.31.0",
    "anyio>=3.7.0",
    "vcrpy>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "vcrpy>=7.0.0",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11+
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "C90"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = false
